@@ -6,15 +6,18 @@ lib_LTLIBRARIES = libmusic.la
 
 libmusic_la_SOURCES = \
 	runtime.cc music/runtime.hh \
-	setup.cc music/setup.hh
-	linearmap.cc music/linearmap.hh
-	arraydata.cc music/arraydata.hh
+	setup.cc music/setup.hh \
+	linear_index.cc music/linear_index.hh \
+	music/index_map.hh music/data_map.hh \
+	array_data.cc music/array_data.hh
 libmusic_la_HEADERS = music.hh
 libmusic_la_CXXFLAGS = @MPI_CXXFLAGS@
 libmusic_la_LDFLAGS = -version-info 0:0 -export-dynamic
 libmusic_ladir = $(includedir)
 
 musicincludedir = $(includedir)/music
-musicinclude_HEADERS = music/runtime.hh music/setup.hh
+musicinclude_HEADERS = music/runtime.hh music/setup.hh \
+		       music/index_map.hh music/data_map.hh \
+		       music/linear_index.hh music/array_data.hh
 
 MKDEP = gcc -M $(DEFS) $(INCLUDES) $(CPPFLAGS) $(CFLAGS)
